@@ -1,7 +1,11 @@
 
 void calc_uv_grads(c_OBJECT *obj);
 
-void ast3d_fixUV(char *objname){
+// uvflag:
+//    1  = fixU
+//    2  = fixV
+//    4  = force calc_uv_grads
+void ast3d_fixUV(char *objname,int uvflag){
     int      i;
     w_NODE *node=NULL;
 
@@ -9,21 +13,21 @@ void ast3d_fixUV(char *objname){
     for (node = ast3d_scene->world; node; node=node->next)
       if (node->type == ast3d_obj_object){
         c_OBJECT *obj = (c_OBJECT *)node->object;
-	if(!objname || strcmp(obj->name,objname)==0)
+        if(!objname || strcmp(obj->name,objname)==0)
         if(obj->numfaces){
           int x=0;
           float tUs=1.0,tVs=1.0;
           float lUs=1.0,lVs=1.0;
           float tUo=0.5,tVo=0.5;
           float lUo=0.5,lVo=0.5;
-          c_MATERIAL *mat=obj->faces[0].pmat;
+          c_MATERIAL *mat=obj->pmat;
           if(mat){
             if(mat->texture.U_scale){tUs=mat->texture.U_scale;tUo=0.5-tUs*mat->texture.U_offset;}
             if(mat->texture.V_scale){tVs=mat->texture.V_scale;tVo=0.5-tVs*mat->texture.V_offset;}
             if(mat->selfillmap.U_scale){lUs=mat->selfillmap.U_scale;lUo=0.5-lUs*mat->selfillmap.U_offset;}
             if(mat->selfillmap.V_scale){lVs=mat->selfillmap.V_scale;lVo=0.5-lVs*mat->selfillmap.V_offset;}
           }
-        
+
 /*---------------------- RENDER TRIANGLES -----------------------*/
     for (i=0;i<obj->numfaces;i++){
       c_VERTEX *pa=obj->faces[i].pa;
@@ -41,19 +45,18 @@ void ast3d_fixUV(char *objname){
 
 // The fixUV main stuff:
 #define PREUV(u1,u2,u3) while(u1>=1.0 && u2>=1.0 && u3>=1.0){ u1-=1.0;u2-=1.0;u3-=1.0;}
-        PREUV(u1,u2,u3);PREUV(v1,v2,v3);
 #define MINMAX(u1,u2,u3) min=u1;if(u2<min) min=u2;if(u3<min) min=u3;
 #define FIXUV(u) while(u>(min+0.6)){++x; u-=1.0;}
-        MINMAX(u1,u2,u3); FIXUV(u1); FIXUV(u2); FIXUV(u3);
-        MINMAX(v1,v2,v3); FIXUV(v1); FIXUV(v2); FIXUV(v3);
+if(uvflag&1){ PREUV(u1,u2,u3); MINMAX(u1,u2,u3); FIXUV(u1); FIXUV(u2); FIXUV(u3);}
+if(uvflag&2){ PREUV(v1,v2,v3); MINMAX(v1,v2,v3); FIXUV(v1); FIXUV(v2); FIXUV(v3);}
 #undef FIXUV
 #undef MINMAX
 #undef PREUV
 
 #if 0
-      obj->faces[i].u1=u1;obj->faces[i].v1=v1;
-      obj->faces[i].u2=u2;obj->faces[i].v2=v2;
-      obj->faces[i].u3=u3;obj->faces[i].v3=v3;
+      obj->faces[i].u1=u1; obj->faces[i].v1=v1;
+      obj->faces[i].u2=u2; obj->faces[i].v2=v2;
+      obj->faces[i].u3=u3; obj->faces[i].v3=v3;
       obj->faces[i].lu1=u1;obj->faces[i].lv1=v1;
       obj->faces[i].lu2=u2;obj->faces[i].lv2=v2;
       obj->faces[i].lu3=u3;obj->faces[i].lv3=v3;
@@ -70,45 +73,12 @@ void ast3d_fixUV(char *objname){
 
     printf("Fixed %d UVs, faces=%ld\n",x,obj->numfaces);
 
-    calc_uv_grads(obj);
+    if( uvflag&4 || 
+        (obj->pmat && obj->pmat->bump.file)
+    ) calc_uv_grads(obj);
 
     }}
 
 }
 
 
-void ast3d_NOfixUV(c_OBJECT *obj){
-int i;
-  if(obj->numfaces>0){
-
-/*------------------ START OF RENDERING LOOP --------------------*/
-
-          float tUs=1.0,tVs=1.0;
-          float lUs=1.0,lVs=1.0;
-          float tUo=0.5,tVo=0.5;
-          float lUo=0.5,lVo=0.5;
-          c_MATERIAL *mat=obj->faces[0].pmat;
-          if(mat){
-            if(mat->texture.U_scale){tUs=mat->texture.U_scale;tUo=0.5-tUs*mat->texture.U_offset;}
-            if(mat->texture.V_scale){tVs=mat->texture.V_scale;tVo=0.5-tVs*mat->texture.V_offset;}
-            if(mat->selfillmap.U_scale){lUs=mat->selfillmap.U_scale;lUo=0.5-lUs*mat->selfillmap.U_offset;}
-            if(mat->selfillmap.V_scale){lVs=mat->selfillmap.V_scale;lVo=0.5-lVs*mat->selfillmap.V_offset;}
-          }
-
-//    printf("texture scale:  U=%f  V=%f\n",tUs,tVs);
-//    printf("texture offset: U=%f  V=%f\n",tUo,tVo);
-//    printf("lightmap scale: U=%f  V=%f\n",lUs,lVs);
-
-    for (i=0;i<obj->numfaces;i++){
-      c_VERTEX *pa=obj->faces[i].pa;
-      c_VERTEX *pb=obj->faces[i].pb;
-      c_VERTEX *pc=obj->faces[i].pc;
-      obj->faces[i].u1=tUo+tUs*(pa->u-0.5); obj->faces[i].v1=tVo-tVs*(pa->v-0.5);
-      obj->faces[i].lu1=lUo+lUs*(pa->u-0.5); obj->faces[i].lv1=lVo-lVs*(pa->v-0.5);
-      obj->faces[i].u2=tUo+tUs*(pb->u-0.5); obj->faces[i].v2=tVo-tVs*(pb->v-0.5);
-      obj->faces[i].lu2=lUo+lUs*(pb->u-0.5); obj->faces[i].lv2=lVo-lVs*(pb->v-0.5);
-      obj->faces[i].u3=tUo+tUs*(pc->u-0.5); obj->faces[i].v3=tVo-tVs*(pc->v-0.5);
-      obj->faces[i].lu3=lUo+lUs*(pc->u-0.5); obj->faces[i].lv3=lVo-lVs*(pc->v-0.5);
-    } // for
-  }  
-}
