@@ -34,7 +34,7 @@ extern void LoadMaterials(c_SCENE *scene);
 extern float bump_du;
 extern float bump_dv;
 
-extern void ast3d_fixUV(char *objname);
+// extern void ast3d_fixUV(char *objname,int uvflag);
 
 extern void particle_init(c_OBJECT *obj,int texture,int np);
 extern void particle_redraw(c_OBJECT *obj,c_MATRIX objmat, float dt);
